# funsolator

./: .gitignore  CMakeLists.txt  readme.org
production_code/: gnarly_beast.cpp
test_code/: CMakeLists.txt  TestFramework.h  beast.template  funsolator.py  tamer.template  test_beast.cpp
